<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Coin Change</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="IngreseMonto">Enter Amount</string>
    <string name="compra">Purchase</string>
    <string name="venta">Sale</string>
    <string name="calcular">Convert</string>
    <string name="saltos"></string>
    <string name="resultado1"></string>
    <string name="resultadoCompra">Result Purchase</string>
    <string name="resultadoventa">Result Sale</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About..</string>
    <string name="menu_nuevo">Settings2</string>
    <string name="action_bar_share_with">Menu</string>
    <string name="own">Wilman Garcia De Leon</string>
    <string name="contac">wilidga@gmail.com</string>
    <string name="Error1">Ingrese monto a convertir</string>
    <string name="prueba">Prueba</string>
    <string name="moneda">Coins</string>
    <string name="moneda1">About $</string>
    <string name="actualizar">Actualize</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="search_hint">Search for</string>
    <string name="Monname">Name of Currency</string>
    <string name="Monprice">Exchange rate</string>
    <string name="ingresemonto">Enter Amount</string>
    <string name="nohayred">Offline</string>    
    <string name="Network_Settings">Network Settings</string>
    <string name="Use_only_Wi_Fi">Use only Wi-Fi</string>
    <string name="wifi">Wifi</string>
    <string name="rate">Rate</string>
    <string name="checkwifi"></string>
    <string name="msg_yes">Yes</string>  
    <string name="msg_no">No</string>
    <string name="msg_facebook">Like on Facebook?</string>
    <string name="msg_exit">Go out of configurations?</string>
    <string name="shareTitle1">Check the exchange rate.</string>
    <string name="shareUrl1"> https://play.google.com/store/apps/details?id=com.vengapps.divisas </string>
</resources>
