<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"     >

    <ImageView
        android:id="@+id/foto"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:adjustViewBounds="true"  
        android:src="@android:drawable/ic_menu_gallery"
        android:scaleType="fitXY"        
        android:cropToPadding="true"    
        />

     <TextView
         android:id="@+id/nameMon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/symbol"
         android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/toggleButton1" 
         android:text="@string/hello_world"/>

     <ToggleButton
         android:id="@+id/tgluno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/symbol"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:textOff="@string/off"
         android:textOn="@string/on" />

     <TextView
         android:id="@+id/symbol"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/foto"
         android:layout_toLeftOf="@+id/toggleButton1"
         android:layout_toRightOf="@+id/foto"
         android:text="@string/hello_world" />

</RelativeLayout>